細かいソースコードの修正

--- a/imgui.ini
+++ b/imgui.ini
@@ -54,9 +54,9 @@ Size=399,436
 Collapsed=1
 
 [Window][sphereTexture]
-Pos=982,96
-Size=267,131
-Collapsed=1
+Pos=137,42
+Size=267,123
+Collapsed=0
 
 [Window][Light]
 Pos=878,399
@@ -81,5 +81,10 @@ Collapsed=0
 [Window][DebugCamera]
 Pos=628,150
 Size=529,210
+Collapsed=0
+
+[Window][SceneNum]
+Pos=60,60
+Size=123,71
 Collapsed=0
 
