--- a/imgui.ini
+++ b/imgui.ini
@@ -94,7 +94,12 @@ Size=202,118
 Collapsed=0
 
 [Window][Player]
-Pos=60,60
-Size=135,48
+Pos=370,54
+Size=285,143
+Collapsed=0
+
+[Window][camera]
+Pos=504,63
+Size=291,116
 Collapsed=0
 
