--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -49,6 +49,7 @@
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="ViewProjection.cpp" />
+    <ClCompile Include="Weapon.cpp" />
     <ClCompile Include="WindowsApp.cpp" />
     <ClCompile Include="WorldTransform.cpp" />
   </ItemGroup>
@@ -110,6 +111,7 @@
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="VertexData.h" />
     <ClInclude Include="ViewProjection.h" />
+    <ClInclude Include="Weapon.h" />
     <ClInclude Include="WindowsApp.h" />
     <ClInclude Include="WorldTransform.h" />
   </ItemGroup>
