--- a/DirectXGame2.vcxproj.filters
+++ b/DirectXGame2.vcxproj.filters
@@ -145,6 +145,12 @@
     <Filter Include="ヘッダー ファイル\game\GlobalVariables">
       <UniqueIdentifier>{aade509f-1c3e-4645-a991-2c8c14dfe259}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\game\weapon">
+      <UniqueIdentifier>{fb1bd77a-abee-4a13-b5bb-0d8a4b7b9dd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\game\weapon">
+      <UniqueIdentifier>{22b3aa78-1e9a-4ed3-afce-4de366145afa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -266,6 +272,9 @@
     </ClCompile>
     <ClCompile Include="ICharacter.cpp">
       <Filter>ソース ファイル\game\character</Filter>
+    </ClCompile>
+    <ClCompile Include="Weapon.cpp">
+      <Filter>ソース ファイル\game\weapon</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -430,6 +439,9 @@
     </ClInclude>
     <ClInclude Include="GlobalVariables.h">
       <Filter>ヘッダー ファイル\game\GlobalVariables</Filter>
+    </ClInclude>
+    <ClInclude Include="Weapon.h">
+      <Filter>ヘッダー ファイル\game\weapon</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
