--- a/imgui.ini
+++ b/imgui.ini
@@ -119,7 +119,12 @@ Size=306,122
 Collapsed=0
 
 [Window][Global Variables]
-Pos=60,60
+Pos=384,34
 Size=307,91
+Collapsed=0
+
+[Window][Weapon]
+Pos=60,60
+Size=37,48
 Collapsed=0
 
