--- a/imgui.ini
+++ b/imgui.ini
@@ -84,12 +84,17 @@ Size=529,210
 Collapsed=0
 
 [Window][SceneNum]
-Pos=105,169
+Pos=104,169
 Size=123,71
 Collapsed=0
 
 [Window][Global Variables]
 Pos=60,60
 Size=749,164
+Collapsed=0
+
+[Window][LIGHT]
+Pos=60,60
+Size=288,124
 Collapsed=0
 
