--- a/imgui.ini
+++ b/imgui.ini
@@ -64,7 +64,7 @@ Size=389,203
 Collapsed=0
 
 [Window][Obj]
-Pos=222,81
+Pos=84,470
 Size=400,269
 Collapsed=0
 
@@ -96,5 +96,10 @@ Collapsed=1
 [Window][LIGHT]
 Pos=88,61
 Size=288,124
+Collapsed=0
+
+[Window][rotateMatrix]
+Pos=60,60
+Size=535,370
 Collapsed=0
 
