--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="MyEngine.cpp" />
     <ClCompile Include="MyImGui.cpp" />
     <ClCompile Include="MyMath.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="SceneManager.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Sprite.cpp" />
@@ -82,6 +83,7 @@
     <ClInclude Include="MyEngine.h" />
     <ClInclude Include="MyImGui.h" />
     <ClInclude Include="MyMath.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="SceneManager.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceObject.h" />
