--- a/DirectXGame2.vcxproj.filters
+++ b/DirectXGame2.vcxproj.filters
@@ -151,6 +151,12 @@
     <Filter Include="ヘッダー ファイル\game\weapon">
       <UniqueIdentifier>{22b3aa78-1e9a-4ed3-afce-4de366145afa}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ヘッダー ファイル\game\LockOn">
+      <UniqueIdentifier>{27d78e8a-1b26-42fd-9d34-720e8555319f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\game\LockOn">
+      <UniqueIdentifier>{3c371d15-4bab-4935-bbb7-fd2952fdf7e5}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -275,6 +281,9 @@
     </ClCompile>
     <ClCompile Include="Weapon.cpp">
       <Filter>ソース ファイル\game\weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="LockOn.cpp">
+      <Filter>ソース ファイル\game\LockOn</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -442,6 +451,9 @@
     </ClInclude>
     <ClInclude Include="Weapon.h">
       <Filter>ヘッダー ファイル\game\weapon</Filter>
+    </ClInclude>
+    <ClInclude Include="LockOn.h">
+      <Filter>ヘッダー ファイル\game\LockOn</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
