--- a/imgui.ini
+++ b/imgui.ini
@@ -134,7 +134,12 @@ Size=247,60
 Collapsed=0
 
 [Window][LockOn]
-Pos=60,60
+Pos=82,-21
 Size=177,116
+Collapsed=0
+
+[Window][Hit]
+Pos=97,133
+Size=128,148
 Collapsed=0
 
