--- a/DirectXGame2.vcxproj.filters
+++ b/DirectXGame2.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClCompile Include="LockOn.cpp">
       <Filter>ソース ファイル\game\LockOn</Filter>
     </ClCompile>
+    <ClCompile Include="Particle.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
@@ -454,6 +457,9 @@
     </ClInclude>
     <ClInclude Include="LockOn.h">
       <Filter>ヘッダー ファイル\game\LockOn</Filter>
+    </ClInclude>
+    <ClInclude Include="Particle.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
